--- a/src/assets/scss/components/_callouts.scss
+++ b/src/assets/scss/components/_callouts.scss
@@ -17,6 +17,9 @@
   &.small {
     padding: $callout-padding * 0.5 $callout-padding * 0.75;
   }
+  &.xsmall {
+    padding: $callout-padding * 0.5;
+  }
   &.xlarge {
     padding: $callout-padding * 2;
     @include breakpoint(large) {
@@ -42,7 +45,6 @@
   }
   &.hollow-thin,
   &.hollow {
-    background-color: $white;
     border: $callout-border;
     color: $fm-gray;
   }
